[package]
name = "lenvironment"
description = "Linux Environment Manager"
license = "MIT"
repository = "https://github.com/ManiProjs/lenvironment.git"
version = "1.3.0"
edition = "2024"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "lenv"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
directories = "6.0.0"
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
toml = "1.1.2"
whoami = "2.1.2"
